# targon-sdk

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  test_console.py
.github/workflows/: publish.yml
cli/: .gitignore  Cargo.toml  Makefile  README.md
cli/src/: cli.rs  error.rs  lib.rs  main.rs
cli/src/client/: config.rs  error.rs  http.rs  mod.rs  pagination.rs
cli/src/client/api/: inventory.rs  mod.rs  projects.rs  ssh_keys.rs  user.rs  version.rs  volumes.rs  workloads.rs
cli/src/client/types/: common.rs  inventory.rs  mod.rs  project.rs  ssh_key.rs  user.rs  volume.rs  workload.rs
cli/src/commands/: auth.rs  inventory.rs  mod.rs  project.rs  rental.rs  ssh_key.rs  user.rs  version.rs  vm.rs  volume.rs  whoami.rs  workload.rs
cli/src/config/: config.rs  default.rs  mod.rs
cli/src/output/: format.rs  mod.rs  palettes.rs  progress.rs  prompt.rs  style.rs  table.rs
examples/: README.md
examples/affine/: affine_validator.py  launch.py  requirements.txt  rollouts_sat_20251114T192001Z.json
examples/affine/affine_env/: __init__.py  abd.py  dataset.py  ded.py  env.py  executor.py  llm_proxy.py  models.py  sat.py
examples/config_deploy/: deploy.py  inspect_container.py  targon.json  targon.yaml
examples/gen-ai/: example_image_generate.py
examples/gen_ai/: example_text_to_audio_generate.py
examples/gettin_started/: getting_started.py
examples/getting_started/: web_endpoint_simple.py
examples/llm/: vllm_example.py
examples/python/client/: getting-started.py
examples/python/sandbox/: lifecycle.py
examples/training/: README.md  __init__.py  compression.py  data_utils.py  distributed_pretraining.py  model.py
examples/web/: web_endpoint_asgi.py
libs/go/: Makefile  README.md  go.mod
libs/python/: Makefile  README.md  pyproject.toml
libs/python/src/targon/: __init__.py
libs/python/src/targon/client/: __init__.py  client.py  constants.py  inventory.py  projects.py  sandbox.py  ssh_key.py  user.py  volume.py  workload.py
libs/python/src/targon/core/: auth.py  config.py  exceptions.py  objects.py  resources.py
libs/typescript/: Makefile  README.md  package.json  tsconfig.json
src/targon/: __init__.py
src/targon/cli/: app.py  auth.py  container.py  deploy.py  get.py  inventory.py  logs.py  main.py  run.py  setup.py
src/targon/client/: app.py  client.py  constants.py  functions.py  heim.py  inventory.py  logs.py  mount.py  publish.py  serverless.py
src/targon/core/: app.py  config.py  console.py  decorators.py  exceptions.py  executor.py  function.py  image.py  mount.py  objects.py  partial_function.py  resources.py
src/targon/proto/: function_execution.proto
src/targon/runtime/: runtime_init.py
src/targon/utils/: async_utils.py  config_parser.py
