[build-system]
requires = ["setuptools~=80.9.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "targon"
version = "0.1.0"
description = "Targon sdk to interacte with the targon rentals and serverless"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["api", "sdk", "targon"]
classifiers = [
]
authors = [
    { name = "Manifold Labs", email = "support@manifold.inc" }
]
license = { file = "LICENSE" }

dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "keyring==25.6.0",
    "rich==14.1.0",
    "aiohttp>=3.8.0",
    "cloudpickle>=2.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
targon = "targon.cli.main:cli"

