[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "targon-sdk"
dynamic = ["version"]
description = "Targon SDK to interact with Targon rentals and serverless"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["api", "sdk", "targon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
authors = [
    { name = "Manifold Labs", email = "dev@manifold.inc" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]

dependencies = [
    "requests>=2.28",
    "click>=8.0",
    "keyring>=25.6.0",
    "rich>=14.1.0",
    "aiohttp>=3.8",
    "cloudpickle>=2.0",
    "PyYAML>=6.0",
    "grpcio>=1.60.0",
    "grpcio-health-checking>=1.60.0",
    "protobuf>=4.25.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "flake8>=6.0",
    "isort>=6.0",
    "mypy>=1.5",
    "grpcio-tools>=1.60.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "targon.version.__version__" }

[project.scripts]
targon = "targon.cli.main:cli"

[project.urls]
Homepage = "https://github.com/manifold-inc/targon-sdk"
Source = "https://github.com/manifold-inc/targon-sdk"
Issues = "https://github.com/manifold-inc/targon-sdk/issues"

[tool.pyright]
typeCheckingMode = "basic"

[tool.black]
line-length = 88
target-version = ['py39']
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["targon"]
src_paths = ["src"]


